# limit_design

./: .gitignore  CNAME  Cargo.toml  badge.html  index.html  package-lock.json  tailwind.config.js
assets/: id_badge.glb
public/: test_card.glb
src/: app.rs  badge.rs  main.rs
src/components/: contact.rs  icons.rs  id_card.rs  mod.rs  ui.rs  waveform.rs
src/pages/: catalog.rs  experiments.rs  home.rs  mod.rs  skills.rs
src/pages/about/: app.rs  mod.rs  page.rs
src/pages/about/components/: navigator.rs  page.rs  timeline.rs
src/pages/about/pages/about/: page.rs
src/pages/about/pages/appendix/: page.rs
src/pages/about/pages/intro/: arrow.rs  page.rs  socials.rs
src/pages/about/pages/skills/: page.rs
src/pages/about/pages/timeline/: page.rs  twenty_five.rs  twenty_four.rs  twenty_three.rs  twenty_two.rs
src/pages/catalog/: page.rs
src/pages/experiments/: mod.rs  page.rs
src/pages/experiments/galaga/: asteroids.rs  collision_detection.rs  debug.rs  despawn.rs  movement.rs  page.rs  schedule.rs  spaceship.rs  system.rs
src/pages/experiments/home/: page.rs
src/pages/experiments/node_tree/: mod.rs  page.rs
src/pages/experiments/node_tree/canvas/: mod.rs  page.rs
src/pages/experiments/node_tree/canvas/core/: init.rs  node.rs
src/pages/experiments/node_tree/canvas/plugins/: mod.rs
src/pages/experiments/node_tree/canvas/plugins/lightning/: plugin.rs
src/pages/experiments/reentry/: calculation.rs  camera.rs  capsule.rs  earth.rs  page.rs  plugins.rs  system.rs
src/pages/experiments/robot/: mod.rs  page.rs
src/pages/experiments/robot/simulation/core/: init.rs
src/pages/experiments/robot/simulation/plugins/: mod.rs
src/pages/experiments/verlet/: page.rs
src/pages/experiments/verlet/components/: control_pane.rs  element_pane.rs  id_card.rs  info.rs  mod.rs  mouse_monitor.rs
src/pages/experiments/waveform/: mod.rs  page.rs  waveform.rs
style/: globals.css
(+14 files in other folders)
