[package]
name = "limit"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
thaw = "=0.4.7"

getrandom = { version = "0.3", features = ["wasm_js"] }
bevy = { version = "0.15" }
leptos-bevy-canvas = "0.2.0"
bevy_panorbit_camera = "0.21.1"

leptos_icons = { version = "0.5" }
icondata = { version = "0.5" }                                      # https://carloskiki.github.io/icondata/
leptos-use = { version = "0.15.7", features = ["use_window_size"] }
web-sys = { version = "0.3" }
strum = "0.26"
strum_macros = "0.26"
leptos_verlet = "=1.2.4"
# leptos_verlet = { path = "../crates/leptos_verlet/leptos_verlet" }
